--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "dev": "node ./dist/index.js",
-    "build": "rm -rf dist && npx tsc"
+    "build": "rm -rf dist && npx tsc",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
+    "@types/node": "^18.7.13",
     "@types/pg": "^8.6.5",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -55,10 +57,13 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "typeorm": "^0.3.7"
   }
 }
