--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest src/** --setupFiles dotenv/config",
+    "test:all": "npm run test:fakes && npm run test:unit",
+    "test:unit": "jest --config ./src/test.config/unit-test.config.js --detectOpenHandles",
+    "test:unit:api": "jest --config ./src/test.config/unit-test.config.js --rootDir ./src/api/ --detectOpenHandles",
+    "test:fakes": "jest --config './src/test.config/fakes-test.config.js' --detectOpenHandles",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "dev": "node ./dist/index.js",
@@ -32,6 +35,7 @@
   },
   "homepage": "https://github.com/JosephPM39/auth_backend#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
@@ -47,7 +51,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
+    "jest": "^28.0.1",
+    "jest-mock": "^28.0.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
@@ -57,6 +62,8 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
